--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco Falaferia - Menú</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
     <!-- <style>
         body { background-color: #f8f9fa; }
         .card-balance {
