--- a/retiro.html
+++ b/retiro.html
@@ -33,6 +33,6 @@
     </a>
   </div>
 
-  <script src="/assets/js/retiro.js"></script>
+  <script src="assets/js/retiro.js"></script>
 </body>
 </html>
