--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
     </div>
 
 
-    <script src="/assets/js/login.js"></script>
+    <script src="assets/js/login.js"></script>
 </body>
 
 </html>
