--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
 
         <div>
-            <button id="btnIngresar">INGRESAR</button>
+            <button id="btnIngresar">INGRESAR <br><h6>bajo su propio riesgo...</h6></button>
         </div>
     </div>
 
