--- a/login.html
+++ b/login.html
@@ -24,12 +24,14 @@
             </div>
 
         </form>
-        <button id="btnLog" class="submit btn-primary col-6">Ingresar</button>
+        <button id="btnLog" class="btn-primary">Ingresar</button>
+        <button id="btnReg" class="btn-secondary">Registrarse</button>
 
     </div>
 
 
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 
 
